--- a/source/index.html
+++ b/source/index.html
@@ -3,67 +3,96 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Погнали</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="96" height="15" alt="Погнали">
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__site site-nav">
-            <li class="site-nav__item">
-              <a>О сервисе</a>
-            </li>
-            <li class="site-nav__item">
-              <a href="form.html">Направления</a>
-            </li>
-            <li class="site-nav__item">
-              <a href="catalog.html">Попутчики</a>
-            </li>
-          </ul>
-          <ul class="main-nav__user user-nav">
-            <li class="user-nav__item">
-              <a class="user-nav__login js-login" href="login.html">
-                Авторизация
-              </a>
-            </li>
-          </ul>
-          <ul class="main-nav__contacts contacts-list">
-            <li class="contacts-list__item">
-              <a class="contacts-list__link contacts-list__link--phone" href="tel:+78005558628">
-                8 800 555-86-28
-              </a>
-            </li>
-            <li class="contacts-list__item">
-              <a class="contacts-list__link contacts-list__link--email" href="mailto:mail@htmlacademy.ru">
-                mail@htmlacademy.ru
-              </a>
-            </li>
-          </ul>
-          <ul class="main-nav__social social">
-            <li class="social__item">
-              <a class="social__link" href="https://www.facebook.com/">
-                <span class="visually-hidden">Facebook</span>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="https://vk.com/">
-                <span class="visually-hidden">Vkontakte</span>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="https://www.instagram.com/">
-                <span class="visually-hidden">Instagram</span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <div class="container">
+        <nav class="main-nav main-nav--opened main-nav--nojs">
+          <a class="page-header__logo logo">
+            <picture>
+              <!-- <source type="image/webp" media="(min-width: 1440px)"
+                srcset="img/logo-desktop-white@1x.webp 1x, img/logo-desktop-white@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/logo-tablet-white@1x.webp 1x, img/logo-tablet-white@2x.webp 2x">
+              <source type="image/webp" srcset="img/logo-mobile-white@1x.webp 1x, img/logo-mobile-white@2x.webp 2x"> -->
+              <source media="(min-width: 1440px)"
+                srcset="img/logo-desktop-white@1x.png 1x, img/logo-desktop-white@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet-white@1x.png 1x, img/logo-tablet-white@2x.png 2x">
+              <img class="logo__image logo__image--white logo__image--hidden visually-hidden" src="img/logo-mobile-white@1x.png" srcset="img/logo-mobile-white@2x.png 2x"
+                width="105" height="15" alt="logo">
+            </picture>
+            <picture>
+              <!-- <source type="image/webp" media="(min-width: 1440px)"
+                srcset="img/logo-desktop-blue@1x.webp 1x, img/logo-desktop-blue@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/logo-tablet-blue@1x.webp 1x, img/logo-tablet-blue@2x.webp 2x">
+              <source type="image/webp" srcset="img/logo-mobile-blue@1x.webp 1x, img/logo-mobile-blue@2x.webp 2x"> -->
+              <source media="(min-width: 1440px)" srcset="img/logo-desktop-blue@1x.png 1x, img/logo-desktop-blue@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet-blue@1x.png 1x, img/logo-tablet-blue@2x.png 2x">
+              <img class="logo__image logo__image--blue" src="img/logo-mobile-blue@1x.png"
+                srcset="img/logo-mobile-blue@2x.png 2x" width="105" height="15" alt="logo">
+            </picture>
+          </a>
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__site site-nav">
+              <li class="site-nav__item">
+                <a>О сервисе</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="form.html">Направления</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="catalog.html">Попутчики</a>
+              </li>
+            </ul>
+            <ul class="main-nav__user user-nav">
+              <li class="user-nav__item">
+                <a class="user-nav__login js-login" href="login.html">
+                  Авторизация
+                </a>
+              </li>
+            </ul>
+            <ul class="main-nav__contacts contacts-list">
+              <li class="contacts-list__item">
+                <a class="contacts-list__link contacts-list__link--phone" href="tel:+78005558628">
+                  8 800 555-86-28
+                </a>
+              </li>
+              <li class="contacts-list__item">
+                <a class="contacts-list__link contacts-list__link--email" href="mailto:mail@htmlacademy.ru">
+                  mail@htmlacademy.ru
+                </a>
+              </li>
+            </ul>
+            <ul class="main-nav__social social">
+              <li class="social__item">
+                <a class="social__link" href="https://www.facebook.com/">
+                  <span class="visually-hidden">Facebook</span>
+                </a>
+              </li>
+              <li class="social__item">
+                <a class="social__link" href="https://vk.com/">
+                  <span class="visually-hidden">Vkontakte</span>
+                </a>
+              </li>
+              <li class="social__item">
+                <a class="social__link" href="https://www.instagram.com/">
+                  <span class="visually-hidden">Instagram</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      
     </header>
 
-    <main class="page-main">
+    <main class="page-main visually-hidden">
         <h1 class="visually-hidden">Сервис поиска попутчиков "Погнали"</h1>
 
       <section class="promo">
@@ -255,7 +284,7 @@
 
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer visually-hidden">
       <div class="page-footer__wrapper">
         <a class="page-footer__logo">
           <img class="page-footer__logo-image" src="img/logo-footer.svg" width="96" height="15" alt="Логотип Погнали?">
