--- a/source/index.html
+++ b/source/index.html
@@ -4,34 +4,34 @@
     <meta charset="utf-8">
     <title>HTML Academy: Погнали</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.min.css">
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header page-header--closed">
       <div class="container">
-        <nav class="main-nav main-nav--opened main-nav--nojs">
+        <nav class="main-nav main-nav--closed main-nav--nojs">
           <a class="page-header__logo logo">
             <picture>
-              <!-- <source type="image/webp" media="(min-width: 1440px)"
+              <source type="image/webp" media="(min-width: 1440px)"
                 srcset="img/logo-desktop-white@1x.webp 1x, img/logo-desktop-white@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)"
                 srcset="img/logo-tablet-white@1x.webp 1x, img/logo-tablet-white@2x.webp 2x">
-              <source type="image/webp" srcset="img/logo-mobile-white@1x.webp 1x, img/logo-mobile-white@2x.webp 2x"> -->
+              <source type="image/webp" srcset="img/logo-mobile-white@1x.webp 1x, img/logo-mobile-white@2x.webp 2x">
               <source media="(min-width: 1440px)"
                 srcset="img/logo-desktop-white@1x.png 1x, img/logo-desktop-white@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/logo-tablet-white@1x.png 1x, img/logo-tablet-white@2x.png 2x">
-              <img class="logo__image logo__image--white logo__image--hidden visually-hidden" src="img/logo-mobile-white@1x.png" srcset="img/logo-mobile-white@2x.png 2x"
+              <img class="logo__image logo__white" src="img/logo-mobile-white@1x.png" srcset="img/logo-mobile-white@2x.png 2x"
                 width="105" height="15" alt="logo">
             </picture>
             <picture>
-              <!-- <source type="image/webp" media="(min-width: 1440px)"
+              <source type="image/webp" media="(min-width: 1440px)"
                 srcset="img/logo-desktop-blue@1x.webp 1x, img/logo-desktop-blue@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)"
                 srcset="img/logo-tablet-blue@1x.webp 1x, img/logo-tablet-blue@2x.webp 2x">
-              <source type="image/webp" srcset="img/logo-mobile-blue@1x.webp 1x, img/logo-mobile-blue@2x.webp 2x"> -->
+              <source type="image/webp" srcset="img/logo-mobile-blue@1x.webp 1x, img/logo-mobile-blue@2x.webp 2x">
               <source media="(min-width: 1440px)" srcset="img/logo-desktop-blue@1x.png 1x, img/logo-desktop-blue@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/logo-tablet-blue@1x.png 1x, img/logo-tablet-blue@2x.png 2x">
-              <img class="logo__image logo__image--blue" src="img/logo-mobile-blue@1x.png"
+              <img class="logo__image logo__blue logo__image--hidden" src="img/logo-mobile-blue@1x.png"
                 srcset="img/logo-mobile-blue@2x.png 2x" width="105" height="15" alt="logo">
             </picture>
           </a>
@@ -315,5 +315,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
