--- a/source/index.html
+++ b/source/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/styles.min.css">
   </head>
   <body>
-    <header class="page-header page-header--closed">
+    <header class="page-header page-header--opened">
       <div class="container">
-        <nav class="main-nav main-nav--closed main-nav--nojs">
+        <nav class="main-nav main-nav--opened main-nav--nojs">
           <a class="page-header__logo logo">
             <picture>
               <source type="image/webp" media="(min-width: 1440px)"
@@ -20,8 +20,8 @@
               <source media="(min-width: 1440px)"
                 srcset="img/logo-desktop-white@1x.png 1x, img/logo-desktop-white@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/logo-tablet-white@1x.png 1x, img/logo-tablet-white@2x.png 2x">
-              <img class="logo__image logo__white" src="img/logo-mobile-white@1x.png" srcset="img/logo-mobile-white@2x.png 2x"
-                width="105" height="15" alt="logo">
+              <img class="logo__image logo__white logo__image--hidden" src="img/logo-mobile-white@1x.png" srcset="img/logo-mobile-white@2x.png 2x"
+                width="100" height="15" alt="logo">
             </picture>
             <picture>
               <source type="image/webp" media="(min-width: 1440px)"
@@ -31,8 +31,8 @@
               <source type="image/webp" srcset="img/logo-mobile-blue@1x.webp 1x, img/logo-mobile-blue@2x.webp 2x">
               <source media="(min-width: 1440px)" srcset="img/logo-desktop-blue@1x.png 1x, img/logo-desktop-blue@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/logo-tablet-blue@1x.png 1x, img/logo-tablet-blue@2x.png 2x">
-              <img class="logo__image logo__blue logo__image--hidden" src="img/logo-mobile-blue@1x.png"
-                srcset="img/logo-mobile-blue@2x.png 2x" width="105" height="15" alt="logo">
+              <img class="logo__image logo__blue" src="img/logo-mobile-blue@1x.png"
+                srcset="img/logo-mobile-blue@2x.png 2x" width="104" height="15" alt="logo">
             </picture>
           </a>
           <button class="main-nav__toggle" type="button">
@@ -50,21 +50,19 @@
                 <a href="catalog.html">Попутчики</a>
               </li>
             </ul>
-            <ul class="main-nav__user user-nav">
-              <li class="user-nav__item">
-                <a class="user-nav__login js-login" href="login.html">
-                  Авторизация
-                </a>
-              </li>
-            </ul>
+            <div class="main-nav__user user-nav">
+              <a class="user-nav__login button button--auth" href="login.html">
+                Авторизация
+              </a>
+            </div>
             <ul class="main-nav__contacts contacts-list">
               <li class="contacts-list__item">
-                <a class="contacts-list__link contacts-list__link--phone" href="tel:+78005558628">
+                <a class="contacts-list__link contacts-list__link--img contacts-list__link--phone" href="tel:+78005558628">
                   8 800 555-86-28
                 </a>
               </li>
               <li class="contacts-list__item">
-                <a class="contacts-list__link contacts-list__link--email" href="mailto:mail@htmlacademy.ru">
+                <a class="contacts-list__link contacts-list__link--img contacts-list__link--email" href="mailto:mail@htmlacademy.ru">
                   mail@htmlacademy.ru
                 </a>
               </li>
@@ -73,16 +71,25 @@
               <li class="social__item">
                 <a class="social__link" href="https://www.facebook.com/">
                   <span class="visually-hidden">Facebook</span>
+                  <svg class="social__icon social__icon--fb" role="img" width="11" height="21">
+                    <use xlink:href="img/sprite.svg#icon-fb"></use>
+                  </svg>
                 </a>
               </li>
               <li class="social__item">
                 <a class="social__link" href="https://vk.com/">
                   <span class="visually-hidden">Vkontakte</span>
+                  <svg class="social__icon social__icon--vk" role="img" width="23" height="12">
+                    <use xlink:href="img/sprite.svg#icon-vk"></use>
+                  </svg>
                 </a>
               </li>
               <li class="social__item">
                 <a class="social__link" href="https://www.instagram.com/">
                   <span class="visually-hidden">Instagram</span>
+                  <svg class="social__icon social__icon--instagram" role="img" width="17" height="17">
+                    <use xlink:href="img/sprite.svg#icon-insta"></use>
+                  </svg>
                 </a>
               </li>
             </ul>
@@ -287,7 +294,7 @@
     <footer class="page-footer visually-hidden">
       <div class="page-footer__wrapper">
         <a class="page-footer__logo">
-          <img class="page-footer__logo-image" src="img/logo-footer.svg" width="96" height="15" alt="Логотип Погнали?">
+          <img class="page-footer__logo-image" src="#" width="96" height="15" alt="Логотип Погнали?">
         </a>
         <ul class="page-footer__social social">
           <li class="social__item">
@@ -315,6 +322,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/main.min.js"></script>
+    <!-- <script src="js/main.min.js"></script> -->
   </body>
 </html>
