--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="page-header page-header--opened">
       <div class="container">
-        <nav class="main-nav main-nav--opened main-nav--nojs">
+        <nav class="main-nav main-nav--closed main-nav--nojs">
           <a class="page-header__logo logo">
             <picture>
               <source type="image/webp" media="(min-width: 1440px)"
@@ -322,6 +322,6 @@
         </div>
       </div>
     </footer>
-    <!-- <script src="js/main.min.js"></script> -->
+    <script src="js/main.min.js"></script>
   </body>
 </html>
