--- a/source/index.html
+++ b/source/index.html
@@ -50,15 +50,14 @@
                 <a href="catalog.html">Попутчики</a>
               </li>
             </ul>
-            <div class="main-nav__user user-nav">
-              <a class="user-nav__login button button--auth" href="login.html">
-                Авторизация
-              </a>
-            </div>
+            <a class="main-nav__auth button button--auth" href="login.html">Авторизация</a>
             <ul class="main-nav__contacts contacts-list">
               <li class="contacts-list__item">
-                <a class="contacts-list__link contacts-list__link--img contacts-list__link--phone" href="tel:+78005558628">
-                  8 800 555-86-28
+                <a class="contacts-list__link" href="tel:+78005558628">
+                  <span class="contacts-list__phone">8 800 555-86-28</span>
+                  <svg class="contacts-list__svg contacts-list__svg--img contacts-list__svg--phone" role="img" width="11" height="21">
+                    <use xlink:href="img/sprite.svg#icon-fb"></use>
+                  </svg>
                 </a>
               </li>
               <li class="contacts-list__item">
