--- a/source/index.html
+++ b/source/index.html
@@ -54,15 +54,19 @@
             <ul class="main-nav__contacts contacts-list">
               <li class="contacts-list__item">
                 <a class="contacts-list__link" href="tel:+78005558628">
-                  <span class="contacts-list__phone">8 800 555-86-28</span>
-                  <svg class="contacts-list__svg contacts-list__svg--img contacts-list__svg--phone" role="img" width="11" height="21">
-                    <use xlink:href="img/sprite.svg#icon-fb"></use>
+                  <svg class="contacts-list__svg contacts-list__svg--img contacts-list__svg--phone" role="img" width="16" height="14">
+                    <use xlink:href="img/sprite.svg#icon-phone"></use>
                   </svg>
+                  <span class="contacts-list__phone">8 800 555-86-28</span>
+                  
                 </a>
               </li>
               <li class="contacts-list__item">
-                <a class="contacts-list__link contacts-list__link--img contacts-list__link--email" href="mailto:mail@htmlacademy.ru">
-                  mail@htmlacademy.ru
+                <a class="contacts-list__link" href="mailto:mail@htmlacademy.ru">
+                  <svg class="contacts-list__svg contacts-list__svg--img contacts-list__svg--mail" role="img" width="18" height="13">
+                    <use xlink:href="img/sprite.svg#icon-mail"></use>
+                  </svg>
+                  <span class="contacts-list__email">mail@htmlacademy.ru</span>
                 </a>
               </li>
             </ul>
