--- a/source/index.html
+++ b/source/index.html
@@ -56,22 +56,26 @@
           <ul class="main-nav__contacts contacts-list">
             <li class="contacts-list__item">
               <a class="contacts-list__link" href="tel:+78005558628">
-                <svg class="contacts-list__svg contacts-list__svg--img contacts-list__svg--phone" role="img" width="16" height="14">
-                  <use xlink:href="img/sprite.svg#icon-phone"></use>
-                </svg>
-                <span class="contacts-list__phone">8 800 555-86-28</span>
-                
+                <div class="contacts-list__icon contacts-list__icon--img contacts-list__icon--phone">
+                  <svg class="contacts-list__svg contacts-list__svg--img contacts-list__svg--phone" role="img" width="16" height="14">
+                    <use xlink:href="img/sprite.svg#icon-phone"></use>
+                  </svg>
+                  <span class="contacts-list__contact">8 800 555-86-28</span>
+                </div>
               </a>
             </li>
             <li class="contacts-list__item">
               <a class="contacts-list__link" href="mailto:mail@htmlacademy.ru">
-                <svg class="contacts-list__svg contacts-list__svg--img contacts-list__svg--mail" role="img" width="18" height="13">
-                  <use xlink:href="img/sprite.svg#icon-mail"></use>
-                </svg>
-                <span class="contacts-list__email">mail@htmlacademy.ru</span>
+                <div class="contacts-list__icon contacts-list__icon--img contacts-list__icon--mail">
+                  <svg class="contacts-list__svg contacts-list__svg--img contacts-list__svg--mail" role="img" width="18" height="13">
+                    <use xlink:href="img/sprite.svg#icon-mail"></use>
+                  </svg>
+                  <span class="contacts-list__contact">mail@htmlacademy.ru</span>
+                </div>
               </a>
             </li>
           </ul>
+
           <ul class="main-nav__social social">
             <li class="social__item">
               <a class="social__link" href="https://www.facebook.com/">
