--- a/source/index.html
+++ b/source/index.html
@@ -107,32 +107,51 @@
       
     </header>
 
-    <main class="page-main visually-hidden">
-        <h1 class="visually-hidden">Сервис поиска попутчиков "Погнали"</h1>
+    <main class="page-main">
+      <h1 class="visually-hidden">Сервис поиска попутчиков "Погнали"</h1>
 
       <section class="promo">
-        <h2 class="promo__title">В путешествие с крутыми попутчиками!"</h2>
-        <blockquote class="promo__review">
-          <p class="promo__review-text">«Лучшее приложение, что я видел в жизни!»</p>
-          <cite class="promo__review-author">Мурат Эльтазин главный редактор газеты «гаджетлайф»</cite>
-        </blockquote>
-        <ul class="promo__list promo-list">
-          <li class="promo-list__item">
-            <p class="promo-list__description">Выберите направление</p>
-          </li>
-          <li class="promo-list__item">
-            <p class="promo-list__description">Изучите идеи путешественников</p>
-          </li>
-          <li class="promo-list__item">
-            <p class="promo-list__description">Находите тех, кто похож на вас</p>
-          </li>
-          <li class="promo-list__item">
-            <p class="promo-list__description">Путешествуйте вместе!</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="promo__title">В путешествие с крутыми попутчиками!</h2>
+          <ul class="promo__contacts promo-contacts">
+            <li class="promo-contacts__item">
+              <a class="promo-contacts__icon promo-contacts__icon--img promo-contacts__icon--phone" href="tel:+78005558628">
+                <span class="visually-hidden">8 800 555-86-28</span>
+              </a>
+            </li>
+            <li class="promo-contacts__item">
+              <a class="promo-contacts__icon promo-contacts__icon--img promo-contacts__icon--mail" href="mailto:mail@htmlacademy.ru">
+                <span class="visually-hidden">mail@htmlacademy.ru</span>
+              </a>
+            </li>
+            <li class="promo-contacts__item">
+              <a class="promo-contacts__auth button button--auth" href="login.html">Авторизация</a>
+            </li>
+          </ul>
+
+          <blockquote class="promo__review">
+            <p class="promo__review-text">«Лучшее приложение, что я видел в жизни!»</p>
+            <cite class="promo__review-author">Мурат Эльтазин главный редактор газеты «гаджетлайф»</cite>
+          </blockquote>
+          
+          <ul class="promo__list promo-list">
+            <li class="promo-list__item promo-list__item--first">
+              <p class="promo-list__description">Выберите направление</p>
+            </li>
+            <li class="promo-list__item promo-list__item--second">
+              <p class="promo-list__description">Изучите идеи путешественников</p>
+            </li>
+            <li class="promo-list__item promo-list__item--third">
+              <p class="promo-list__description">Находите тех, кто&nbsp;похож на вас</p>
+            </li>
+            <li class="promo-list__item promo-list__item--fourth">
+              <p class="promo-list__description">Путешествуйте вместе!</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="about-service">
+      <section class="about-service visually-hidden">
         <h2 class="about-service__title">О сервисе</h2>
         <p class="about-service__description">
           Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в чужих. 
@@ -142,7 +161,7 @@
         </b>
       </section>
 
-      <section class="direction">
+      <section class="direction visually-hidden">
         <h2 class="direction__title">О сервисе</h2>
         <p class="direction__description">
           Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в чужих. 
@@ -176,7 +195,7 @@
         <a class="direction__button button" href="form.html">Показать все</a>
       </section>
 
-      <section class="companions">
+      <section class="companions visually-hidden">
         <h2 class="companions__title">Попутчики</h2>
         <p class="companions__description">Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, а другому маршрут для хайкинга.</p>
         <b class="companions__text">Теперь можно легко найти единомышленников!</b>
@@ -274,7 +293,7 @@
         </ul>
         <a class="companions__button button" href="catalog.html">Показать всех</a>
       </section>
-      <section class="buisness-tariff">
+      <section class="buisness-tariff visually-hidden">
         <h2 class="buisness-tariff__title">Бизнес-тарифы</h2>
         <ul class="buisness-tariff__price business-price">
           <li class="business-price__item">
