--- a/source/index.html
+++ b/source/index.html
@@ -160,21 +160,20 @@
         </div>
       </section>
 
-      <section class="about-service visually-hidden">
-        <h2 class="about-service__title">О сервисе</h2>
-        <p class="about-service__description">
-          Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в чужих. 
-        </p>
-        <b class="about-service__text">
-          А если найдете кого-то близкого по духу — скорее зовите в совместный трип!
-        </b>
+      <section class="about-service">
+        <div class="container">
+          <div class="about-service__wrapper">
+            <h2 class="about-service__title">О сервисе</h2>
+            <p class="about-service__description">Любое путешествие веселее с&nbsp;попутчиками, которые на одной волне с&nbsp;тобой! Делитесь своими идеями путешествий и черпайте вдохновение в&nbsp;чужих.</p>
+            <p class="about-service__text">А если найдете кого-то близкого по духу &mdash; скорее зовите в совместный трип!</p>
+            <a class="about-service__button button button--triangle" href="About.html">Подробнее</a>
+          </div>
+        </div>
       </section>
 
       <section class="direction visually-hidden">
         <h2 class="direction__title">О сервисе</h2>
-        <p class="direction__description">
-          Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в чужих. 
-        </p>
+        <p class="direction__description">Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в чужих.</p>
         <ul class="direction__country-list country-list">
           <li class="country-list__item">
             <img src="http://placehold.it/270x110">
