--- a/source/index.html
+++ b/source/index.html
@@ -177,14 +177,14 @@
           <p class="direction__description">Мы не продаем туры и&nbsp;ничего не рекламируем. Люди сами пишут о странах, куда хотели бы отправиться и чем можно там заняться.</p>
           <ul class="direction__country-list country-list">
             <li class="country-list__item">
-              <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="img/thailand-desktop@1x.webp 1x, img/thailand-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/thailand-mobile@1x.webp 1x, img/thailand-mobile@2x.webp 2x">
-                <source type="image/webp" srcset="img/thailand-mobile@1x.webp 1x, img/thailand-mobile@2x.webp 2x">
-                <source media="(min-width: 1440px)" srcset="img/thailand-desktop@1x.jpg 1x, img/thailand-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/thailand-mobile@1x.jpg, img/thailand-mobile@2x.jpg 2x">
-                <img class="country-list__image" src="img/thailand-mobile@1x.jpg" srcset="img/thailand-mobile@2x.jpg 2x" alt="Таиланд">
-              </picture>
+              <div class="country-list__image">
+                <picture>
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/thailand-desktop@1x.webp 1x, img/thailand-desktop@2x.webp 2x">
+                  <source type="image/webp" srcset="img/thailand-mobile@1x.webp 1x, img/thailand-mobile@2x.webp 2x">
+                  <source media="(min-width: 768px)" srcset="img/thailand-desktop@1x.jpg 1x, img/thailand-desktop@2x.jpg 2x">
+                  <img src="img/thailand-mobile@1x.jpg" srcset="img/thailand-mobile@2x.jpg 2x" alt="Таиланд">
+                </picture>
+              </div>
               <div class="country-list__info">
                 <h3 class="country-list__title country-list__title--icon country-list__title--thailand">Таиланд</h3>
                 <p class="country-list__place">Джунгли зовут!</p>
@@ -192,14 +192,14 @@
               </div>
             </li>
             <li class="country-list__item">
-              <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="img/france-desktop@1x.webp 1x, img/france-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/france-mobile@1x.webp 1x, img/france-mobile@2x.webp 2x">
-                <source type="image/webp" srcset="img/france-mobile@1x.webp 1x, img/france-mobile@2x.webp 2x">
-                <source media="(min-width: 1440px)" srcset="img/france-desktop@1x.jpg 1x, img/france-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/france-mobile@1x.jpg, img/france-mobile@2x.jpg 2x">
-                <img class="country-list__image" src="img/france-mobile@1x.jpg" srcset="img/france-mobile@2x.jpg 2x" alt="Франция">
-              </picture>
+              <div class="country-list__image">
+                <picture>
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/france-desktop@1x.webp 1x, img/france-desktop@2x.webp 2x">
+                  <source type="image/webp" srcset="img/france-mobile@1x.webp 1x, img/france-mobile@2x.webp 2x">
+                  <source media="(min-width: 768px)" srcset="img/france-desktop@1x.jpg 1x, img/france-desktop@2x.jpg 2x">
+                  <img src="img/france-mobile@1x.jpg" srcset="img/france-mobile@2x.jpg 2x" alt="Франция">
+                </picture>
+              </div>
               <div class="country-list__info">
                 <h3 class="country-list__title country-list__title--icon country-list__title--france">Франция</h3>
                 <p class="country-list__place">Трэ бьен, манифик!</p>
@@ -207,14 +207,14 @@
               </div>
             </li>
             <li class="country-list__item">
-              <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="img/czech-desktop@1x.webp 1x, img/czech-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/czech-mobile@1x.webp 1x, img/czech-mobile@2x.webp 2x">
-                <source type="image/webp" srcset="img/czech-mobile@1x.webp 1x, img/czech-mobile@2x.webp 2x">
-                <source media="(min-width: 1440px)" srcset="img/czech-desktop@1x.jpg 1x, img/czech-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/czech-mobile@1x.jpg, img/czech-mobile@2x.jpg 2x">
-                <img class="country-list__image" src="img/czech-mobile@1x.jpg" srcset="img/czech-mobile@2x.jpg 2x" alt="Чехия">
-              </picture>
+              <div class="country-list__image">
+                <picture>
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/czech-desktop@1x.webp 1x, img/czech-desktop@2x.webp 2x">
+                  <source type="image/webp" srcset="img/czech-mobile@1x.webp 1x, img/czech-mobile@2x.webp 2x">
+                  <source media="(min-width: 768px)" srcset="img/czech-desktop@1x.jpg 1x, img/czech-desktop@2x.jpg 2x">
+                  <img src="img/czech-mobile@1x.jpg" srcset="img/czech-mobile@2x.jpg 2x" alt="Чехия">
+                </picture>
+              </div>
               <div class="country-list__info">
                 <h3 class="country-list__title country-list__title--icon country-list__title--czech">Чехия</h3>
                 <p class="country-list__place">Закоулки старой Европы</p>
