--- a/source/index.html
+++ b/source/index.html
@@ -235,8 +235,8 @@
         <div class="container">
           <div class="companions__wrapper">
             <h2 class="companions__title">Попутчики</h2>
-            <p class="companions__description">Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, <span class="br"></span> а другому маршрут для хайкинга.</p>
-            <p class="companions__text">Теперь можно легко <span class="br"></span> найти единомышленников!</p>
+            <p class="companions__description">Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, <span class="br br--desk"></span> а другому маршрут для хайкинга.</p>
+            <p class="companions__text">Теперь можно легко <span class="br br--desk"></span> найти единомышленников!</p>
           </div>
           <ul class="companions__list user-list">
             <li class="user-list__item">
@@ -293,7 +293,7 @@
 
             <li class="user-list__item">
               <h3 class="user-list__title">
-                <a class="user-list__profile-link user-list__profile-link--ready" href="#">Петя Демин</a>
+                <a class="user-list__profile-link user-list__profile-link--ready" href="user-Demin-Petya.html">Петя Демин</a>
               </h3>
               <div class="user-list__wrapper">
                 <picture>
