Buisness-tariffs Tab

--- a/source/index.html
+++ b/source/index.html
@@ -364,8 +364,8 @@
           </ol>
 
           <a class="buisness-tariff__open" href="buisness-tariff.html">
-            <svg class="buisness-tariff__svg" width="26" height="26">
-              <use xlink:href="#businessman"></use>
+            <svg class="buisness-tariff__svg" role="img" width="23" height="21">
+              <use xlink:href="img/sprite.svg#icon-business"></use>
             </svg>
             Показать тарифы для бизнеса</a>
         </div>
