--- a/source/index.html
+++ b/source/index.html
@@ -367,7 +367,43 @@
             <svg class="buisness-tariff__svg" role="img" width="23" height="21">
               <use xlink:href="img/sprite.svg#icon-business"></use>
             </svg>
-            Показать тарифы для бизнеса</a>
+            Показать тарифы для бизнеса
+          </a>
+        </div>
+      </section>
+
+      <section class="form">
+        <div class="container">
+          <h2 class="form__title">Заинтересовались?</h2>
+          <p class="form__text">Зарегистрируйтесь, это&nbsp;быстро&nbsp;и бесплатно! Уже&nbsp;зарегистрированы? Тогда скорее
+            <a class="form__text-link" href="user-login.html">авторизуйтесь</a>.
+          </p>
+
+          <form class="form__login-form" action="https://echo.htmlacademy.ru" method="get">
+            <label class="form__login-label visually-hidden" for="user-email">Поле ввода электронной почты</label>
+            <input class="form__login-input" type="email" id="user-email" placeholder="E-mail">
+            <button class="form__login-submit button button--triangle" type="submit">Регистрация</button>
+          </form>
+          <p class="form__text form__text--quest">Остались вопросы? Мы&nbsp;с&nbsp;радостью на них ответим!</p>
+
+          <ul class="form__contacts contacts">
+            <li class="contacts__item">
+              <a class="contacts__link" href="tel:+78005558628">
+                <svg class="contacts__svg contacts__svg--img contacts__svg--phone" role="img" width="16" height="14">
+                  <use xlink:href="img/sprite.svg#icon-phone"></use>
+                </svg>
+                <span class="contacts__contact">8 800 555-86-28</span>
+              </a>
+            </li>
+            <li class="contacts__item">
+              <a class="contacts__link" href="mailto:mail@htmlacademy.ru">
+                <svg class="contacts__svg contacts__svg--img contacts__svg--mail" role="img" width="18" height="13">
+                  <use xlink:href="img/sprite.svg#icon-mail"></use>
+                </svg>
+                <span class="contacts__contact">mail@htmlacademy.ru</span>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
 
