--- a/source/index.html
+++ b/source/index.html
@@ -407,6 +407,28 @@
         </div>
       </section>
 
+      <section class="address">
+        <div class="container">
+          <h2 class="visually-hidden">Адрес и схема проезда</h2>
+          <address class="address__contact">
+            <svg class="address__svg" role="img" width="17" height="21">
+              <use xlink:href="img/sprite.svg#icon-location"></use>
+            </svg>
+            ул. Большая Конюшенная,&nbsp;19/8
+          </address>
+          <a class="address__route button button--triangle" href="https://goo.gl/maps/FzoFDDmMbqpFMkwM7">Проложить маршрут</a>
+        </div>
+      </section>
+
+      <section class="map">
+        <h2 class="visually-hidden">Адрес на карте</h2>
+        <!-- <iframe class="map__body"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1668.6365112686128!2d30.322569986590928!3d59.936558449796756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1595154244078!5m2!1sru!2sru"
+          allowfullscreen="" tabindex="0">
+        </iframe> -->
+        <span class="map__marker"></span>
+      </section>
+
     </main>
 
     <footer class="page-footer visually-hidden">
