--- a/source/index.html
+++ b/source/index.html
@@ -422,42 +422,62 @@
 
       <section class="map">
         <h2 class="visually-hidden">Адрес на карте</h2>
-        <!-- <iframe class="map__body"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1668.6365112686128!2d30.322569986590928!3d59.936558449796756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1595154244078!5m2!1sru!2sru"
-          allowfullscreen="" tabindex="0">
-        </iframe> -->
-        <span class="map__marker"></span>
+        <div class="map__img">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003174!2d30.32085871619972!3d59.93871916905406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1599491244099!5m2!1sru!2sru" width="600" height="450" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
       </section>
 
     </main>
 
-    <footer class="page-footer visually-hidden">
-      <div class="page-footer__wrapper">
-        <a class="page-footer__logo">
-          <img class="page-footer__logo-image" src="#" width="96" height="15" alt="Логотип Погнали?">
+    <footer class="page-footer">
+      <div class="container">
+        <a class="page-footer__logo logo">
+          <picture>
+            <source type="image/webp" media="(min-width: 1440px)"
+              srcset="img/logo-desktop-blue@1x.webp 1x, img/logo-desktop-blue@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/logo-tablet-blue@1x.webp 1x, img/logo-tablet-blue@2x.webp 2x">
+            <source type="image/webp" srcset="img/logo-mobile-blue@1x.webp 1x, img/logo-mobile-blue@2x.webp 2x">
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop-blue@1x.png 1x, img/logo-desktop-blue@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet-blue@1x.png 1x, img/logo-tablet-blue@2x.png 2x">
+            <img class="logo__image " src="img/logo-mobile-blue@1x.png"
+              srcset="img/logo-mobile-blue@2x.png 2x" width="104" height="15" alt="logo">
+          </picture>
         </a>
+
         <ul class="page-footer__social social">
           <li class="social__item">
             <a class="social__link" href="https://www.facebook.com/">
               <span class="visually-hidden">Facebook</span>
+              <svg class="social__icon social__icon--fb" role="img" width="11" height="21">
+                <use xlink:href="img/sprite.svg#icon-fb"></use>
+              </svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link" href="https://vk.com/">
               <span class="visually-hidden">Vkontakte</span>
+              <svg class="social__icon social__icon--vk" role="img" width="23" height="12">
+                <use xlink:href="img/sprite.svg#icon-vk"></use>
+              </svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link" href="https://www.instagram.com/">
               <span class="visually-hidden">Instagram</span>
+              <svg class="social__icon social__icon--instagram" role="img" width="17" height="17">
+                <use xlink:href="img/sprite.svg#icon-insta"></use>
+              </svg>
             </a>
           </li>
         </ul>
+
         <div class="page-footer__copyright copyright">
-          <span class="copyright__text">Разработано</span>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <img class="copyright__logo" src="img/logo-htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
-            <span class="visually-hidden">HTML Academy</span>
+          <div class="copyright__text">Разработано</div>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
+            <svg class="copyright__link-icon" role="img" width="27" height="34">
+              <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
+            </svg>
           </a>
         </div>
       </div>
