--- a/source/index.html
+++ b/source/index.html
@@ -416,7 +416,7 @@
             </svg>
             ул. Большая Конюшенная,&nbsp;19/8
           </address>
-          <a class="address__route button button--triangle" href="https://goo.gl/maps/FzoFDDmMbqpFMkwM7">Проложить маршрут</a>
+          <a class="address__route button button--triangle" href="https://goo.gl/maps/P2poqRzv8YMnwQNE8">Проложить маршрут</a>
         </div>
       </section>
 
@@ -483,26 +483,28 @@
       </div>
     </footer>
 
-    <section class="page-modal tariff visually-hidden">
-      <h2 class="tariff__title">Бизнес-тарифы</h2>
-      <ul class="tariff__price business-price">
-        <li class="business-price__item">
-          <span>Реклама у блоггера</span>
-          <span>300 000 руб./пост</span>
-        </li>
-        <li class="business-price__item">
-          <span>Накрутка подписчиков</span>
-          <span>от 1 руб./шт.</span>
-        </li>
-        <li class="business-price__item">
-          <span>Лайки от ботов</span>
-          <span>от 20 коп./лайк</span>
-        </li>
-        <li class="business-price__item">
-          <span>Ваш продакт-плейсмент</span>
-          <span>Индивидуально</span>
-        </li>
-      </ul>
+    <section class="page-modal tariff">
+      <div class="tariff__wrapper">
+        <h2 class="tariff__title">Бизнес-тарифы</h2>
+        <ul class="tariff__price">
+          <li class="tariff__item">
+            <p>Реклама у блоггера</p>
+            <p>300 000 руб./пост</p>
+          </li>
+          <li class="tariff__item">
+            <p>Накрутка подписчиков</p>
+            <p>от 1 руб./шт.</p>
+          </li>
+          <li class="tariff__item">
+            <p>Лайки от ботов</p>
+            <p>от 20 коп./лайк</p>
+          </li>
+          <li class="tariff__item">
+            <p>Ваш продакт-плейсмент</p>
+            <p>Индивидуально</p>
+          </li>
+        </ul>
+      </div>
       <button class="tariff__close" type="button">Закрыть окно</button>
     </section>
 
